<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/profileLinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/passport"
            app:civ_border_color="#1659C1"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/nameTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Name: Md Rifat Ahmed Rony"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/emailTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Email: rifatrony018@gmail.com"
            android:textColor="@color/black"
            android:textSize="17sp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableRight="@drawable/call"
                android:text="Contact:  "
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/contactTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="+8801628979644"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/resumeButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#DBE0E6"
            android:text="My Resume"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profileLinearLayoutId"
        android:layout_marginTop="20dp"
        android:background="@drawable/all_card_background_linear_layout"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstll"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/projectsLayoutId"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/medicine"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/projects" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/projects"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/skillsLayoutId"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/skills" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/skills"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/workExperienceLayoutId"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/experience" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/work_experience"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/githubLinearLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/github" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/github"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linkedinLinearLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/linkedin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/linkedin"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/educationLinearLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/education" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/education"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>